src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_string_symbol_special.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    &&
//
// Historique:
//    cree le 01/01/2023

{
        println("&&");
}